tests/sumo/errors/routes/stops/false_edge/errors.sumo
Error: The edge 'foo' for a stop is not known in vehicle '0'.
